# vdw_stack

./: Cargo.toml
src/: atoms.rs  enumerate.rs  lib.rs
src/layers/: flat.rs  mod.rs  multilayer.rs  tmd.rs
tests/: multilayer.rs
