[package]
name = "vdw_stack"
version = "0.1.0"
authors = ["Tim Lovorn <tflovorn@austin.utexas.edu>"]

[dependencies]
tightbinding = { path = "../tightbinding" }
ndarray = "*"

[dev-dependencies]
pre-commit = "*"

[package.metadata.precommit]
fmt = "cargo +nightly fmt -- --write-mode=diff 2>&1"
test = "cargo test 2>&1"

[[bin]]
name = "enumerate_layer_supercell"
path = "src/bin/enumerate_layer_supercell.rs"
